# immunomics

./: .gitignore  README.md  env.yml  pyproject.toml  setup.py
.github/workflows/: ci.yml
configs/: integration.yaml
examples/: multiomics_integration_demo.ipynb
immunomics/: __init__.py  cli.py
immunomics/analysis/: __init__.py  differential.py  peak_gene_links.py  tf_activity.py
immunomics/data/: __init__.py  datasets.py  preprocess_atac.py  preprocess_rna.py
immunomics/integration/: __init__.py  benchmark.py  mofa.py  multivi.py  wnn.py
immunomics/utils/: __init__.py  config.py
immunomics/visualization/: __init__.py  plots.py
tests/: conftest.py  test_analysis_extended.py  test_edge_cases.py  test_immunomics.py  test_integration_extended.py  test_preprocessing_extended.py  test_visualization_extended.py
