[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "immunomics"
version = "0.1.0"
description = "Multi-omics integration of immune cell states from matched scRNA-seq + scATAC-seq"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Patrick Grady" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "click>=8.0",
    "scanpy>=1.9",
    "anndata>=0.10",
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "pyyaml",
    "tqdm",
    "rich",
    "statsmodels>=0.14",
    "scikit-misc>=0.3",
]

[project.optional-dependencies]
ml = ["scvi-tools>=1.0"]
r = ["rpy2>=3.5"]
multimodal = ["muon>=0.1.5", "pybiomart>=0.2"]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff>=0.4",
]

[project.scripts]
immunomics = "immunomics.cli:main"

[project.urls]
Homepage = "https://github.com/pgrady1322/immunomics"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["immunomics"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
